Fix porting issues
Took 37 seconds